--- a/Prototype1/pom.xml
+++ b/Prototype1/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.robosh</groupId>
-    <artifactId>composite-patern</artifactId>
+    <artifactId>prototype</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
