--- a/patterns/pom.xml
+++ b/patterns/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.robosh</groupId>
-    <artifactId>pattern</artifactId>
+    <artifactId>patterns</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
